Answer text no longer wraps around to robot's feet

--- a/style.css
+++ b/style.css
@@ -35,4 +35,5 @@ form
 *#robot
 {
     width: 40%;
+    float: left;
 }
